--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,53 +1,53 @@
-name: tests
+name: shredder CI
 
 on:
-  push:
-    branches:
-      - master
-  pull_request: null
+    push:
+        branches:
+            - master
+    pull_request:
+        branches:
+            - master
+            - releases/*
 
 jobs:
-  tests:
-    name: tests
-    strategy:
-      matrix:
-        pyver: ["3.8", "3.9", "3.10"]
+    tests:
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ ubuntu-latest ]
+                py: [ "3.11" ]
+                CC: [ gcc ]
+                CXX: [ g++ ]
 
-    runs-on: "ubuntu-latest"
+        defaults:
+            run:
+                # cf. https://github.com/conda-incubator/setup-miniconda#important
+                shell: bash -l {0}
 
-    steps:
-      - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
+            - uses: conda-incubator/setup-miniconda@v2
+              with:
+                  python-version: ${{ matrix.pyver }}
+                  channels: conda-forge,defaults
+                  channel-priority: strict
+                  show-channel-urls: true
+                  miniforge-version: latest
 
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          python-version: ${{ matrix.pyver }}
-          channels: conda-forge,defaults
-          channel-priority: strict
-          show-channel-urls: true
-          miniforge-version: latest
-          miniforge-variant: Mambaforge
+            - name: Install deps
+              run: |
+                conda config --set always_yes yes
+                conda install --file conda-requirements.txt
+                conda install --file dev-requirements.txt
 
-      - name: configure conda and install code
-        shell: bash -l {0}
-        run: |
-          mamba config --set always_yes yes
-          mamba install --quiet \
-            pip \
-            setuptools \
-            numpy \
-            flake8 \
-            pytest \
-            ngmix \
-            esutil
+            - name: Install shredder
+              run:
+                pip install .
 
-          python -m pip install -e .
+            - name: lint
+              run: |
+                flake8 shredder
 
-      - name: lint
-        shell: bash -l {0}
-        run: |
-          flake8
-
-      - name: test
-        shell: bash -l {0}
-        run: |
-          pytest -vv tests
+            - name: Run tests
+              run: |
+                pytest -vv tests/
